--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/wallpaper3"
+
     tools:context=".MainActivity">
 
 
@@ -25,6 +27,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="16dp"
             app:layout_constrainedHeight="true"
+
             app:layout_constraintBottom_toTopOf="@+id/text_gchat_indicator"
             app:layout_constraintTop_toBottomOf="@+id/layout_group_chat" />
 
@@ -48,6 +51,7 @@
             android:id="@+id/layout_gchat_chatbox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
